[bump-minor] Changelog:
- compile with the correct java runtime for supported version
- clean up fallback value provider use